fixed shrinklerstats display, scrollbar issue in flame-graph

--- a/src/client/flame/flame-graph.module.css
+++ b/src/client/flame/flame-graph.module.css
@@ -75,3 +75,7 @@
   height: 100%;
   background-color: white;
 }
+
+.scrollbar::-webkit-scrollbar {
+  width: 0px;
+}
